# pollo

./: .gitignore  Makefile  pyproject.toml
core/: views.py
core/templates/: about.html  base.html  footer.html  hero.html  index.html  services.html  testimonial.html  topbar.html
manage/: settings.py
