[tool.poetry]
name = "pollo"
version = "0.1.0"
description = ""
authors = ["Júlio Paiva <juliopaiva.ti@hotmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.4"
gunicorn = "^25.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
